--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ body {
     font-size: 30px;
     
     size: 100px;
-    color: rgb(25, 108, 153);
+    color: rgb(4, 72, 121);
     
     
     
@@ -140,7 +140,7 @@ body {
     text-align: center;
     padding: 10px;
     font-weight: bold;
-    color: rgb(25, 108, 153);
+    color: rgb(4, 72, 121);
    
     
     
@@ -187,7 +187,7 @@ body {
 
 
 .tab-button.active {
-    background-color: #053f81;
+    background-color: #043266;
     width:240px; /* Set a fixed width for the logo */
     max-width: 100%;
     height: auto;
@@ -215,13 +215,13 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 0px;
-    border: 4px solid rgb(4, 72, 121);
+    border: 4px solid rgb(3, 107, 182);
      /* Set table border color to blue */
     
 }
 
 table, th {
-    border: 3px solid rgb(4, 72, 121);  /* Set table border color to blue */
+    border: 3px solid rgb(3, 107, 182);  /* Set table border color to blue */
 }
 
 td {
